# ssig-onvif

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: SSIGOnvifOpenSSLUtil.cmake  SSIGOnvifUtil.cmake
doc/: Report.aux  Report.tex
samples/: CMakeLists.txt  main.cpp
ssigonvif/: CMakeLists.txt
ssigonvif/include/ssigonvif/: OnvifClientDevice.hpp  OnvifClientDiscovery.hpp  OnvifClientMedia.hpp  OnvifClientPTZ.hpp
ssigonvif/src/: OnvifClientDevice.cpp  OnvifClientDiscovery.cpp  OnvifClientMedia.cpp  OnvifClientPTZ.cpp
